[project]
name = "panasonic-viera"
description = "Library to control Panasonic Viera TVs"
license = "MIT"
version = "0.4.4"
readme = "README.md"
authors = [{ name = "Florian Holzapfel", email = "flo.holzapfel@gmail.com" }]
requires-python = '>=3.9,<4.0'
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    'pycryptodome (>=3.20.0,<4.0.0)',
    'xmltodict (>=0.13.0,<2.0.0)',
]

[tool.poetry]
requires-poetry = '>=2.0'

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"

[build-system]
requires = ['poetry-core (>=2.0)']
build-backend = "poetry.core.masonry.api"
